--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,16 +1,33 @@
 anyio==3.4.0
 asgiref==3.4.1
+attrs==21.2.0
+black==21.12b0
+certifi==2021.10.8
+charset-normalizer==2.0.9
 click==8.0.3
 fastapi==0.70.1
 h11==0.12.0
 httptools==0.3.0
 idna==3.3
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.4.0
+pluggy==1.0.0
+py==1.11.0
 pydantic==1.8.2
+pyparsing==3.0.6
+pytest==6.2.5
 python-dotenv==0.19.2
 PyYAML==6.0
+requests==2.26.0
 sniffio==1.2.0
 starlette==0.16.0
+toml==0.10.2
+tomli==1.2.3
 typing-extensions==4.0.1
+urllib3==1.26.7
 uvicorn==0.16.0
 uvloop==0.16.0
 watchgod==0.7
