--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Set env vars to build
-        run: SERVER_MODE=build
       - name: Checkout repository
         uses: actions/checkout@v2.3.1
       - name: Create python venv
@@ -23,6 +21,7 @@ jobs:
       - name: Run UTs
         run: |
           cd server
+          SERVER_MODE=build
           pytest -v
 
   build-and-deploy:
