added SERVER_MODE env var fix2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run UTs
         run: |
           cd server
-          SERVER_MODE=build
+          export SERVER_MODE=build
           pytest -v
 
   build-and-deploy:
