--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.7.5
 anyio==3.4.0
 asgiref==3.4.1
 attrs==21.2.0
@@ -6,15 +7,21 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 fastapi==0.70.1
+greenlet==1.1.2
 h11==0.12.0
 httptools==0.3.0
 idna==3.3
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
 iniconfig==1.1.1
+Mako==1.1.6
+MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
 platformdirs==2.4.0
 pluggy==1.0.0
+psycopg2==2.9.2
 py==1.11.0
 pydantic==1.8.2
 pyparsing==3.0.6
@@ -23,6 +30,7 @@ python-dotenv==0.19.2
 PyYAML==6.0
 requests==2.26.0
 sniffio==1.2.0
+SQLAlchemy==1.4.29
 starlette==0.16.0
 toml==0.10.2
 tomli==1.2.3
@@ -32,3 +40,4 @@ uvicorn==0.16.0
 uvloop==0.16.0
 watchgod==0.7
 websockets==10.1
+zipp==3.6.0
