auth0 api (access token) auth middleware

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,10 +2,14 @@ alembic==1.7.5
 anyio==3.4.0
 asgiref==3.4.1
 attrs==21.2.0
+Authlib==0.15.5
 black==21.12b0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 click==8.0.3
+cryptography==36.0.1
+ecdsa==0.17.0
 fastapi==0.70.1
 greenlet==1.1.2
 h11==0.12.0
@@ -23,12 +27,18 @@ platformdirs==2.4.0
 pluggy==1.0.0
 psycopg2==2.9.2
 py==1.11.0
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.8.2
+PyJWT==2.3.0
 pyparsing==3.0.6
 pytest==6.2.5
 python-dotenv==0.19.2
+python-jose==3.3.0
 PyYAML==6.0
 requests==2.26.0
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.29
 starlette==0.16.0
