--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: postgres
+          POSTGRES_DB: QuizMasterDB_test
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
         ports:
