--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -33,6 +33,7 @@ pydantic==1.8.2
 PyJWT==2.3.0
 pyparsing==3.0.6
 pytest==6.2.5
+pytest-mock==3.6.1
 python-dotenv==0.19.2
 python-jose==3.3.0
 PyYAML==6.0
