github ci test database fix2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           cd server
           python -m pip install -r requirements.txt
       - name: Create postgres database
-        run: psql -c 'create database QuizMasterDevDB_test;' -U postgres
+        run: psql -h postgres -U postgres -c 'CREATE DATABASE QuizMasterDevDB_test;'
       - name: Run UTs
         run: |
           cd server
