--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           python -m pip install -r requirements.txt
       - name: Create postgres database
         run: |
-          PGPASSWORD=postgres
+          export PGPASSWORD=postgres
           psql -h localhost -U postgres -c 'CREATE DATABASE QuizMasterDevDB_test;'
       - name: Run UTs
         run: |
