github ci test database fix11

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres-latest
+        image: postgres
         env:
           POSTGRES_DB: QuizMasterDB_test
           POSTGRES_PASSWORD: postgres
