--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: QuizMasterDB_test
+          POSTGRES_DB: QuizMasterDevDB_test
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
         ports:
@@ -34,11 +34,11 @@ jobs:
         run: |
           cd server
           python -m pip install -r requirements.txt
-      - name: Create postgres database
-        run: |
-          export PGPASSWORD=postgres
-          psql -h localhost -U postgres -tc "CREATE DATABASE QuizMasterDevDB_test;"
-          psql -l
+      #- name: Create postgres database
+      #  run: |
+      #    export PGPASSWORD=postgres
+      #    psql -h localhost -U postgres -tc "CREATE DATABASE QuizMasterDevDB_test;"
+      #    psql -l
       - name: Run UTs
         run: |
           cd server
